--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <ol>
   <li>
     <h1>Italian soda at Bytes</h1>
-    <a href="https://goo.gl/maps/EjneHBEPksw">Near Block A,CCET(DG),Sector-26</a>
+    <a href="https://maps.app.goo.gl/DxJcJQcPtgzZm9Yy8">Near Block A,CCET(DG),Sector-26</a>
     <p>
     When's the last time you've had an Italian soda? It had been a while for me, but I wanted to 
     join my friend for a non-caffeinated beverage at Bytes and I became reaquainted with the combination 
@@ -34,7 +34,7 @@
   </li>
   <li>
     <h1>Bubble tea at Pop Tea Bar</h1>
-    <a href="https://goo.gl/maps/3jHRC2umZCy">Near Block A,CCET(DG),Sector-26</a>
+    <a href="https://maps.app.goo.gl/DxJcJQcPtgzZm9Yy8">Near Block A,CCET(DG),Sector-26</a>
     <p>
       When your boba craving strikes, head over to Pop Tea Bar, a cute little bubble tea shop on Cambridge
        Avenue. The menu is your standard bubble tea fare with nothing too adventurous on the menu -- no 
@@ -54,7 +54,7 @@
   </li>
   <li>
     <h1>Latte at CoHo</h1>
-    <a href="https://goo.gl/maps/jaov5FhK5852">Near Block A,CCET(DG),Sector-26</a>
+    <a href="https://maps.app.goo.gl/DxJcJQcPtgzZm9Yy8">Near Block A,CCET(DG),Sector-26</a>
     <p>
         I can't tell you whether CoHo has a particularly amazing Vanilla Bean Latte, only because CoHo 
         is the only place I've ever ordered a Vanilla Bean Latte from. I'm not even totally sure I know 
@@ -67,7 +67,7 @@
   </li>
   <li>
   <h1>Agua Fresca at Nexus Cafe</h1>
-  <a href="https://goo.gl/maps/WzJZx183auA2">Near Block A,CCET(DG),Sector-26</a>
+  <a href="https://maps.app.goo.gl/DxJcJQcPtgzZm9Yy8">Near Block A,CCET(DG),Sector-26</a>
     <p>
         Nexus Cafe has a lot of tasty things packed into its cafeteria space, including agua fresca! Grab
          a cup of this fresh and fruity beverage before you head to the check out line. Nexus Cafe has 
