--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Stanford: 4 on-campus beverages you should be drinking</title>
+    <title>CCET: 4 on-campus beverages you should be drinking</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <header >  
-      <p id="write2">CCET(DG): </p><p id="write">4 on-campus beverages you should be drinking</p>
+      <p id="write2">CCET(DG): </p><p id="write">  on-campus beverages you should be drinking</p>
     </header>
     <div class="ProfileText">
 <img src="pic4.jpeg" id="rupali" alt="1">
