--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
        smooth and delicious! They have little bites to eat too, like popcorn chicken and eggrolls, in 
        perfect snack-size portions. There's not too much seating, but there's a cute outdoor area in 
        the back for warmer days.
-      Pop Tea Bar isn't exactly on campus, but the Marguerite has got you covered. Ride the
-       1050A to California and El Camino and it's a short walk from there. 
-       (11 minutes total from the Gates Computer Science Building!) <br>
+      Pop Tea Bar isn't exactly on campus, but the Marguerite has got you covered.
+        <br>
       
        <div class="reccomend"><span>Recommendation:</span> Classic 
         Milk Tea with tapioca + an order of popcorn chicken.</div>
